--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile "com.android.support:appcompat-v7:$support_libs"
+    compile "com.android.support:design:$support_libs"
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile "com.android.support:cardview-v7:$support_libs"
+    compile "com.android.support:recyclerview-v7:$support_libs"
     testCompile 'junit:junit:4.12'
 }
 repositories {
