--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 /**
  * Create a variable called keystorePropertiesFile, and initialize it to your
@@ -13,7 +14,6 @@ def releaseKeystoreProperties = new Properties()
 // Load your keystore.properties file into the keystoreProperties object.
 releaseKeystoreProperties.load(new FileInputStream(releaseKeystoreProps))
 
-
 def debugKeystoreProps = rootProject.file("keystore_debug.properties")
 
 // Initialize a new Properties() object called keystoreProperties.
@@ -25,6 +25,8 @@ debugKeystoreProperties.load(new FileInputStream(debugKeystoreProps))
 buildscript {
     ext {
         support_libs = '26.0.0-alpha1'
+        butterknife_version = '8.0.1'
+        rxretro_version = '2.3.0'
     }
 }
 
@@ -58,13 +60,13 @@ android {
             minifyEnabled false
             shrinkResources false
             signingConfig signingConfigs.debug
-            resValue "string", "app_name", "Quadro Pixellate Debug"
+            resValue "string", "app_name", "Image Pixellate Debug"
         }
         release {
             minifyEnabled false
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            resValue "string", "app_name", "Quadro Pixellate"
+            resValue "string", "app_name", "Image Pixellate"
         }
     }
 }
@@ -79,8 +81,15 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile "com.android.support:cardview-v7:$support_libs"
     compile "com.android.support:recyclerview-v7:$support_libs"
+    compile "com.jakewharton:butterknife:$butterknife_version"
+    kapt "com.jakewharton:butterknife-compiler:$butterknife_version"
+    compile "com.squareup.retrofit2:retrofit:$rxretro_version"
+    compile "com.squareup.retrofit2:adapter-rxjava2:$rxretro_version"
+    compile "com.squareup.retrofit2:converter-gson:$rxretro_version"
+    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
     testCompile 'junit:junit:4.12'
 }
+
 repositories {
     mavenCentral()
 }
